--- a/codebook/RMD_codebook_draft_ST.Rmd
+++ b/codebook/RMD_codebook_draft_ST.Rmd
@@ -3869,7 +3869,7 @@ ell_word_long <- ell_word %>%
 ```
 
 
-```{r elf-var-table, results ='asis'}
+```{r ell-var-table, results ='asis'}
 # Create the gt table object and apply generic theme
 ell_gt_table <- gt(ell_word_long)
 
@@ -4153,3 +4153,400 @@ ell_count_complete %>%
   labs(title = "Distribution of Total Scores for \nElliott Self Delinquency Scale (Binary Count Data)")
 ```
 
+## Mental Health Contimuun - SF (MHC-SF)
+
+### MHC Description
+
+The MHC is a 14-item questionnaire designed to measure *insert*.
+
+For the present study, 14 items from the MHC were collected in order to #TODO: insert text here
+
+No items need to be reverse scored. *TODO: need change text here Higher scores indicate more severe mental health symptoms. *
+  
+The missing data rule was applied. Calculations were completed for participants with 33% or less missing data (this includes -77 responses)
+
+Reference: [ @keyes2009brief]
+[ @lamers2011evaluating](https://onlinelibrary.wiley.com/doi/abs/10.1002/jclp.20741); [DOI](https://doi.org/10.1002/jclp.20741)
+
+
+### MHC Variables
+
+#### Value Labels
+
+All MHC variables have the same response options.
+
+
+```{r MHC-label-table, results = 'asis'}
+
+mhc_label_df <- data.frame(
+  value = c("0", "1", "2", "3", "4", "5"),
+  label = c("Never",
+            "Once or Twice",
+            "About Once A Week",
+            "About 2 or 3 Times A Week",
+            "Almocst Every Day",
+            "Every Day")) %>% 
+  t() %>% 
+  as.data.frame()
+
+mhc_label_df <- setNames(mhc_label_df[-1, ], unlist(mhc_label_df[1, ]))
+
+
+#create table
+mhc_label_table <- mhc_label_df %>%
+  gt() %>% 
+  tab_options(table.border.top.width = 1, table.border.bottom.width = 1,
+              table.border.left.width = 1, table.border.right.width = 1) %>% 
+  cols_width(everything() ~ px(180)) %>% 
+  apply_labtab_theme()
+
+# Print the table
+print(mhc_label_table)
+
+
+```
+
+#### Survey Items
+
+MHC survey items are presented in the following table:
+  
+```{r mhc-var-prep}
+# Pull question wording from qualtrics data
+mhc_word <- qualtrics %>% 
+  select(starts_with("h"))%>%
+  slice(1)
+
+#create table with variable name, description, and notes
+mhc_word_long <- mhc_word %>% 
+  pivot_longer(cols = everything(), 
+               names_to = "var_name",
+               values_to = "description") %>% 
+  mutate(description = str_replace(description, "^\\d+\\.\\s*", ""),
+         var_name = str_to_lower(var_name), 
+         notes = as.character("")) %>% 
+  slice(1:39)
+```
+
+
+```{r elf-var-table, results ='asis'}
+# Create the gt table object and apply generic theme
+mhc_gt_table <- gt(mhc_word_long)
+
+# Table-specific formatting (col width, names)
+mhc_gt_table <- mhc_gt_table %>% 
+  cols_label(var_name = "Variable", 
+             description = "Description",
+             notes = "Notes") %>% 
+  apply_tbl_theme() %>% 
+  cols_width(notes ~ px(150),
+             var_name ~ px(100)) %>%
+  tab_style(style = cell_text(align = "left"), locations = cells_column_labels())
+
+# Print the table
+print(mhc_gt_table)
+
+
+```
+
+#### Scale and Subscales
+
+Information on the total score and subscale variables are below. Variables were c
+onstructed by summing included items. 
+```{r mhc df, echo = FALSE, eval = TRUE, message = FALSE, warning = FALSE}
+mhc <-
+  complete_rnd2 %>%
+  select(
+    id,
+    matches("^h")
+  )
+
+mhc <-
+  mhc %>%
+  subtract_scale(
+    id = 'id',
+    value = 1
+  ) %>%
+  mutate(
+    across(
+      -id,
+      ~case_when(
+        .x == 6 ~ -77,
+        .x == 7 ~ NA_real_,
+        is.na(.x) ~ NA_real_,
+        TRUE ~ .x
+      )
+    )
+  )
+
+mhc_calc <-
+  mhc %>%
+  mutate(
+    across(
+      .cols = -id,
+      .fns = ~case_when(
+        .x == -77 ~ NA_real_,
+        TRUE ~ .x
+      )
+    )
+  )
+
+mhc_miss <- mhc %>%
+  pct_miss_fun(
+    id = "id",
+    n_items = 14
+  )
+
+mhc_miss %>%
+  gt::gt() %>%
+  gt::tab_header(
+    title = 'Missing Data',
+    subtitle = 'By Each Participant'
+  )
+
+mhc_remove <- mhc_miss %>% filter(miss_pct >= 20) %>% pull(id)
+```
+
+```{r mhc calculation, echo = FALSE, eval = TRUE, message = FALSE, warning = FALSE}
+mhc_complete <-
+  mhc_calc %>%
+  composite_total_avg_fun(
+    id = 'id',
+    max_value = 5,
+    n_items = 14
+  ) %>%
+  distinct(
+    across(
+      .cols = everything()
+    )
+  ) %>%
+  subscale_create(
+    total_only = FALSE,
+    scale1 = c("h1", "h2", "h3"),
+    scale1_nitems = 3,
+    scale2 = c("h4", "h5", "h6", "h7", "h8"),
+    scale2_nitems = 5,
+    scale3 = c("h9", "h10", "h11", "h12", "h13", "h14"),
+    scale3_nitems = 6
+  ) %>%
+  rename(
+    mhc_total = sum_values,
+    mhc_avg = mean_values,
+    mhc_pa_total = total1,
+    mhc_pa_avg = avg1,
+    mhc_swb_total = total2,
+    mhc_swb_avg = avg2,
+    mhc_pwb_total = total3,
+    mhc_pwb_avg = avg3
+  ) %>%
+  mutate(
+    across(
+      c(
+        mhc_total,
+        mhc_avg,
+        mhc_pa_total,
+        mhc_pa_avg,
+        mhc_swb_total,
+        mhc_swb_avg,
+        mhc_pwb_total,
+        mhc_pwb_avg
+      ),
+      ~case_when(
+        id %in% mhc_remove ~ NA_real_,
+        TRUE ~ .x
+      )
+    )
+  )
+
+mhc_complete <- mhc_complete %>%
+  pivot_longer(
+    h4:h14,
+    names_to = "pre_flourish",
+    values_to = "flourish_feel"
+  ) %>%
+  mutate(
+    flourish = case_when(
+      flourish_feel %in% c(4, 5) ~ 1,
+      !flourish_feel %in% c(4, 5) ~ 0,
+      TRUE ~ 0
+    ),
+    languish = case_when(
+      flourish_feel %in% c(0, 1) ~ 1,
+      !flourish_feel %in% c(0, 1) ~ 0,
+      TRUE ~ 0
+    )
+  ) %>%
+  group_by(id) %>%
+  mutate(
+    six_or_over = sum(flourish, na.rm = TRUE),
+    neg_six_or_more = sum(languish, na.rm = TRUE)
+  ) %>%
+  ungroup() %>%
+  mutate(
+    flourish_diagnosis = case_when(
+      (h1 %in% c(4, 5) & six_or_over >= 6) |
+        (h2 %in% c(4, 5) & six_or_over >= 6) |
+        (h3 %in% c(4, 5) & six_or_over >= 6)
+      ~ "flourish",
+      TRUE ~ "not_flourish"
+    ),
+    languish_diagnosis = case_when(
+      (h1 %in% c(0, 1) & neg_six_or_more >= 6) |
+        (h2 %in% c(0, 1) & neg_six_or_more >= 6) |
+        (h3 %in% c(0, 1) & neg_six_or_more >= 6)
+      ~ "languish",
+      TRUE ~ "not_languish"
+    )
+  ) %>%
+  pivot_wider(
+    names_from = pre_flourish,
+    values_from = flourish_feel
+  ) %>%
+  distinct(
+    id,
+    .keep_all = TRUE
+  ) %>%
+  mutate(
+    final_diagnosis = case_when(
+      (flourish_diagnosis == "flourish" &
+         languish_diagnosis == "not_languish") ~ "flourish",
+      (flourish_diagnosis == "not_flourish" &
+         languish_diagnosis == "languish") ~ "languish",
+      (flourish_diagnosis == "not_flourish" &
+         languish_diagnosis == "not_languish") ~ "moderately mentally healthy"
+    )
+  )
+```
+
+```{r mhc alpha, echo = FALSE, eval = TRUE, message = FALSE, warning = FALSE}
+#Calculate internal reliability 
+mhc_alpha <-
+  mhc_complete %>%
+  select(h1:h3) %>%
+  psych::alpha(check.keys = TRUE)
+
+
+mhc_pa_alpha <-
+  mhc_complete %>%
+  select(h1:h3) %>%
+  psych::alpha(check.keys = TRUE)
+
+mhc_swb_alpha <-
+  mhc_complete %>%
+  select(h4:h8) %>%
+  psych::alpha(check.keys = TRUE)
+
+mhc_pwb_alpha <-
+  mhc_complete %>%
+  select(h9:h14) %>%
+  psych::alpha(check.keys = TRUE)
+
+
+```
+
+```{r MHC-scale-table, results = 'asis'}
+
+
+# Create the table as a data frame
+mhc_scale_df <- data.frame(
+  var_name = c("mhc_raw_total", "Positive Affect", "Social Well-being", "Psychological well-being"),
+  scale = c("MHC Total score (14)"),
+  scale_construction = c(" `h1`, `h2`, `h3`, `h4`, `h5`, `h6`, `h7`, `h8`, `h9`, `h10`, `h11`, `h12`, `h13`, `h14`",
+                         "`h1`, `h2`,`h3`", "`h4`, `h5`, `h6`, `h7`, `h8`", "`h9`, `h10`, `h11`, `h12`, `h13`, `h14`"
+                         ),
+  scale_range = c(""), #TODO fill in range 
+  alpha = c(round(mhc_alpha$total$raw_alpha, 3),
+            round(mhc_pa_alpha$total$raw_alpha, 3),
+            round(mhc_swb_alpha$total$raw_alpha, 3),
+            round(mhc_pwb_alpha$total$raw_alpha, 3))
+)
+
+# Create the gt table object
+mhc_scale_df <- gt(mhc_scale_df) %>%
+  cols_align(columns = c("scale_range"), align = "center") %>% 
+  cols_label(var_name = "Variable Name",
+             scale = "Scale (# of items)", 
+             scale_construction = "Scale Construction",
+             scale_range = "Range*",
+             # alpha = "Alpha"
+             ) %>% 
+  tab_footnote(footnote = "*Range of possible values; `_r` Reverse scored variable") %>% 
+  tab_options(table.border.bottom.style = "hidden") %>% 
+  cols_width(scale ~ px(135)) %>% 
+  apply_tbl_theme() 
+
+# Print the table
+print(mhc_scale_df)
+
+
+```
+### Summary Statistics
+
+#### Descriptive Statistics
+
+Descriptive statistics are presented below for each item, total, and subscale score:
+  
+```{r mhc-mean-items}
+# Calculate the summary statistics for each variable
+mhc_summary_data <- lapply(mhc, function(x) {
+  mean_val <- sprintf("%.2f", round(mean(x, na.rm = TRUE), 2))
+  sd_val <- round(sd(x, na.rm = TRUE), 2)
+  range_val <- paste(min(x, na.rm = TRUE), max(x, na.rm = TRUE), sep = "-")
+  miss_val <- round(mean(is.na(x)) * 100, 2)
+  c(Mean = mean_val, SD = sd_val, Range = range_val, Missing = paste(miss_val, "%", sep = ""))
+})
+
+# Convert summary_data to a data frame
+mhc_summary_data <- as.data.frame(mhc_summary_data)%>%select(-c(id))
+
+# Set items as first row
+mhc_summary_data <- rbind(names(mhc_summary_data), mhc_summary_data) %>% 
+  t() %>% 
+  as.data.frame()
+
+# Create the gt table
+mhc_tbl <- mhc_summary_data %>%
+  gt() %>%
+  cols_label(`1` = "Variable",
+             Range = "Range*",
+             Missing = "% Missing") %>% 
+  cols_width(everything() ~ px(115)) %>%
+  cols_align(columns = c("Mean", "SD", "Range", "Missing"), align = "center") %>% 
+  tab_footnote("*Range of data values") %>% 
+  tab_options(table.border.bottom.style = "hidden") %>%
+  apply_tbl_theme()
+
+# Render the table
+mhc_tbl
+
+```
+
+#### Distributions
+
+Distributions are presented below for the total score and each subscale:
+  
+```{r mhc-distributions, class.source='fold', echo = FALSE}
+
+mhc_complete %>%
+  composite_hist(
+    x = mhc_total
+  ) +
+  labs(title = 'Distribution of Total Scores for MHC-SF Measure')
+
+mhc_complete %>%
+  composite_hist(
+    x = mhc_pa_total
+  ) +
+  labs(title = 'Distribution of Total Scores for MHC-SF Positive Affect Subscale')
+
+mhc_complete %>%
+  composite_hist(
+    x = mhc_swb_total
+  ) +
+  labs(title = 'Distribution of Total Scores for MHC-SF Social Well-being Subscale')
+
+mhc_complete %>%
+  composite_hist(
+    x = mhc_pwb_total
+  ) +
+  labs(title = 'Distribution of Total Scores for MHC-SF Psychological Well-being Subscale')
+```
